# Photoshop

./: .gitignore  CMakeLists.txt
api_implementation/: CMakeLists.txt  ps_bar.cpp  ps_bar.h  ps_canvas.cpp  ps_canvas.h  ps_windows.cpp  ps_windows.h
logger/: CMakeLists.txt
photoshop/source/: main.cpp
photoshopAPI/: CMakeLists.txt  README.md  api_bar.hpp  api_canvas.hpp  api_photoshop.hpp  api_sfm.cpp  api_sfm.hpp  api_system.cpp  api_system.hpp  plugin_example.hpp
sfm_implementation/: CMakeLists.txt  sfm_implementation.cpp  sfm_implementation.h
system_plugins/: CMakeLists.txt  ps_plugin_brush.cpp  ps_plugin_brush.h  ps_plugin_canvas.cpp  ps_plugin_canvas.h  ps_plugin_circle.cpp  ps_plugin_circle.h  ps_plugin_eraser.cpp  ps_plugin_line.cpp  ps_plugin_line.h  ps_plugin_rectangle.cpp  ps_plugin_rectangle.h  ps_plugin_shape.cpp  ps_plugin_shape.h  ps_plugin_toolbar.cpp  ps_plugin_toolbar.h
system_plugins/brush/: CMakeLists.txt  ps_plugin_brush.cpp  ps_plugin_brush.h
system_plugins/canvas/: CMakeLists.txt  ps_plugin_canvas.cpp  ps_plugin_canvas.h
system_plugins/eraser/: CMakeLists.txt  ps_plugin_eraser.cpp  ps_plugin_eraser.h  ps_plugin_eraser_config.pscfg
system_plugins/filters/: CMakeLists.txt  ps_plugin_filter_negative_config.pscfg  ps_plugin_filters.cpp  ps_plugin_filters.h
system_plugins/line/: CMakeLists.txt  ps_plugin_line.cpp  ps_plugin_line.h  ps_plugin_line_config.pscfg
system_plugins/parse_sprite/: CMakeLists.txt  ps_parse_sprite.cpp  ps_parse_sprite.h
system_plugins/secondary_panel/: CMakeLists.txt  ps_plugin_color_palette_config.pscfg  ps_plugin_secondary_panel.cpp  ps_plugin_secondary_panel.h  ps_plugin_secondary_panel_config.pscfg
system_plugins/shape/: CMakeLists.txt  ps_plugin_ellipse_config.pscfg  ps_plugin_rect_config.pscfg  ps_plugin_shape.cpp  ps_plugin_shape.h
system_plugins/toolbar/: CMakeLists.txt  ps_plugin_toolbar.cpp  ps_plugin_toolbar.h
